tests/invalid/Tuple_Invalid_7.whiley
function f(real,int r) -> int:
    int x, int y
    x,y = r
    return 1